bugfix z-index

--- a/scss/modules/dropdown.scss
+++ b/scss/modules/dropdown.scss
@@ -23,6 +23,7 @@
 	margin-top: 10px;
 	background-color: #FFF;
 	box-shadow: 5px 5px 0 0 rgba(0, 0, 0, .25);
+    z-index:95;
 
 	&::after,
 	&::before {
